--- a/src/app/componentes/cabecalho/cabecalho.component.html
+++ b/src/app/componentes/cabecalho/cabecalho.component.html
@@ -7,10 +7,10 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&pp=ygUXbmV2ZXIgZ29ubmEgZ2l2ZSB5b3UgdXA%3D" target="_blank">Página Inicial</a>
+        <a class="nav-link" [routerLink]="'pagina-inicial'" [routerLinkActive]="'active'">Página Inicial</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&pp=ygUXbmV2ZXIgZ29ubmEgZ2l2ZSB5b3UgdXA%3D" target="_blank">Sobre</a>
+        <a class="nav-link" [routerLink]="'visualizar-tarefas'" [routerLinkActive]="'active'">Visualizar Tarefas</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&pp=ygUXbmV2ZXIgZ29ubmEgZ2l2ZSB5b3UgdXA%3D" target="_blank">Contato</a>
