--- a/src/app/componentes/visualizar-tarefas/visualizar-tarefas.component.html
+++ b/src/app/componentes/visualizar-tarefas/visualizar-tarefas.component.html
@@ -1,1 +1,77 @@
+<!-- CORPO DO NOSSO COMPONENTE -->
+<div class="container mt-4">
+  <h2>Lista de Tarefas
+    <button class="btn btn-primary "
+            (click)="openModal()">
+      <i class="fas fa-plus"></i>
+      Nova Tarefa
+    </button>
+  </h2>
+  <table class="table table-striped table-hover">
+    <thead>
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">Tarefa</th>
+      <th scope="col">Data Inicio</th>
+      <th scope="col">Status</th>
+      <th>Ações <i class="fas fa-cog"></i></th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>Estudar Bootstrap</td>
+      <td>05/04/24</td>
+      <td>Em andamento</td>
+      <td>
+        <button class="btn btn-danger"><i class="fas fa-trash-alt"></i></button>-
+        <button class="btn btn-warning"><i class="fas fa-edit"></i></button>
+      </td>
+    </tr>
+    <tr>
+      <th scope="row">2</th>
+      <td>Fazer exercícios</td>
+      <td>09/04/2024</td>
+      <td>Pendente</td>
+    </tr>
+    </tbody>
+  </table>
+</div>
+
+<div class="modal" tabindex="-1" id="add-tarefa">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Adicionar nova tarefa</h5>
+      </div>
+      <div class="modal-body">
+        <form>
+          <div class="form-row">
+            <div class="mb-3 col-md-12">
+              <label for="tituloTarefa" class="form-label">Titulo Tarefa</label>
+              <input type="text" class="form-control" id="tituloTarefa">
+            </div>
+
+            <div class="mb-3 col-md-6">
+              <label for="dataInicioTarefa" class="form-label">Data Inicio</label>
+              <input type="datetime-local" class="form-control" id="dataInicioTarefa">
+            </div>
+
+            <div class="mb-3 col-md-6">
+              <label for="dataConclusaoTarefa" class="form-label">Data Conclusao</label>
+              <input type="datetime-local" class="form-control" id="dataConclusaoTarefa">
+            </div>
+
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn-secondary" type="button" data-bs-dismiss="modal" (click)="closeModal()"> Fechar </button>
+        <button class="btn btn-success" type="button" (click)="closeModal()"> Salvar </button>
+
+      </div>
+    </div>
+  </div>
+
+</div>
 
